feat: some updates made